[sc-9045] Implement New Onboarding Flow from AWS
- New route, guard and component for AWS onboarding flow
  - the guard checks if `customer_token` is provided, calls `/marketplace/aws/setup_account` endpoint and with the response is set the current account in the SDK and authenticate the user
  - in case of error (missing or invalid customer_token) we redirect to login page with an error message
- Create the different steps for AWS onboarding flow

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -657,6 +657,18 @@
 	"notification.type.modification-completed": "Edició del recurs completada",
 	"notification.type.modification-failed": "Edició del recurs fallida",
 	"notification.type.sync-server-down": "El servidor de sincronització està inactiu",
+	"onboarding.aws.create-kb.title": "Crear una Knowledge Box",
+	"onboarding.aws.get-started.create-kb": "Crear el meu propi Knowledge Box",
+	"onboarding.aws.get-started.create-kb-or-invite": "Voleu crear el vostre propi Knowledge Box o convidar altres usuaris a configurar-lo?",
+	"onboarding.aws.get-started.invite-owner": "Convida un propietari del compte a crear Knowledge Box",
+	"onboarding.aws.get-started.kb-help": "Un Knowledge Box és un contenidor que emmagatzema i organitza dades dins del vostre compte Nuclia. Els Knowledge Boxes representen espais de treball aïllats (com ara projectes, equips o clients) i funcionen de manera independent amb els seus propis permisos d'accés per mantenir la informació segura i organitzada.",
+	"onboarding.aws.get-started.kb-required": "Per carregar, gestionar i cercar fitxers primer heu de crear un <strong>Knowledge Box<strong>.",
+	"onboarding.aws.get-started.next-button": "Següent pas",
+	"onboarding.aws.monthly-budget.help": "Podeu establir un límit de despesa mensual. Sempre el podeu canviar més endavant a la pàgina de subscripció.",
+	"onboarding.aws.monthly-budget.question": "T'agradaria establir un pressupost mensual per al consum?",
+	"onboarding.aws.monthly-budget.set-up-account-button": "Configura el teu compte",
+	"onboarding.aws.monthly-budget.set-up-error": "S'ha produït un error en configurar el pressupost mensual. Torneu-ho a provar més tard des de la pàgina de subscripció.",
+	"onboarding.aws.title": "Benvingut al vostre compte",
 	"pastanaga.calendar.invalid-format": "Format de data no vàlid (format esperat: \"MMM dd, YYYY\")",
 	"pastanaga.calendar.months": "Mesos",
 	"pastanaga.calendar.years": "Anys",
