--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -658,6 +658,19 @@
 	"notification.type.modification-completed": "Resource edition completed",
 	"notification.type.modification-failed": "Resource edition failed",
 	"notification.type.sync-server-down": "Sync server is down",
+	"onboarding.aws.create-kb.title": "Create a Knowledge Box",
+	"onboarding.aws.get-started.create-kb": "Create my own Knowledge Box",
+	"onboarding.aws.get-started.create-kb-or-invite": "Would you like to create your own Knowledge Box or invite other users to set it up?",
+	"onboarding.aws.get-started.invite-owner": "Invite an account owner to create Knowledge Box",
+	"onboarding.aws.get-started.kb-help": "A Knowledge Box is a container that stores and organizes data inside your Nuclia account. Knowledge Boxes represent isolated workspaces (such as projects, teams, or clients) and operate independently with their own access permissions to keep information secured and organized.",
+	"onboarding.aws.get-started.kb-required": "In order to upload, manage and search files you first need to create a <strong>Knowledge Box<strong>.",
+	"onboarding.aws.get-started.next-button": "Next step",
+	"onboarding.aws.get-started.title": "Get started",
+	"onboarding.aws.monthly-budget.help": "You can set a monthly spending limit. You can always change it later in the Subscription page.",
+	"onboarding.aws.monthly-budget.question": "Would you like to set a monthly budget for consumption?",
+	"onboarding.aws.monthly-budget.set-up-account-button": "Set up your account",
+	"onboarding.aws.monthly-budget.set-up-error": "An error occurred while setting up the monthly budget. Please try again later from the Subscription page.",
+	"onboarding.aws.title": "Welcome to your account",
 	"pastanaga.calendar.invalid-format": "Invalid date format (expected format: \"MMM dd, YYYY\")",
 	"pastanaga.calendar.months": "Months",
 	"pastanaga.calendar.years": "Years",
