--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -658,6 +658,19 @@
 	"notification.type.modification-completed": "Édition de la ressource terminée",
 	"notification.type.modification-failed": "Échec de l'édition de la ressource",
 	"notification.type.sync-server-down": "Le serveur de synchronisation est en panne",
+	"onboarding.aws.create-kb.title": "Créer une Knowledge Box",
+	"onboarding.aws.get-started.create-kb": "Créer ma propre Knowledge Box",
+	"onboarding.aws.get-started.create-kb-or-invite": "Souhaitez-vous créer votre propre Knowledge Box ou inviter d’autres utilisateurs pour la configurer ?",
+	"onboarding.aws.get-started.invite-owner": "Inviter un propriétaire de compte à créer une Knowledge Box",
+	"onboarding.aws.get-started.kb-help": "Une Knowledge Box est un conteneur qui stocke et organise les données dans votre compte Nuclia. Les Knowledge Boxes représentent des espaces de travail isolés (tels que des projets, des équipes ou des clients) et fonctionnent de manière indépendante avec leurs propres autorisations d'accès pour garantir la sécurité et l'organisation des informations.",
+	"onboarding.aws.get-started.kb-required": "Pour importer, gérer et rechercher des fichiers, vous devez d'abord créer une <strong>Knowledge Box<strong>.",
+	"onboarding.aws.get-started.next-button": "Étape suivante",
+	"onboarding.aws.get-started.title": "Commencer",
+	"onboarding.aws.monthly-budget.help": "Vous pouvez définir une limite de dépenses mensuelle. Vous pourrez toujours la modifier ultérieurement sur la page Abonnement.",
+	"onboarding.aws.monthly-budget.question": "Souhaitez-vous fixer un budget mensuel de consommation ?",
+	"onboarding.aws.monthly-budget.set-up-account-button": "Configurez votre compte",
+	"onboarding.aws.monthly-budget.set-up-error": "Une erreur s'est produite lors de la configuration du budget mensuel. Veuillez réessayer plus tard à partir de la page Abonnement.",
+	"onboarding.aws.title": "Bienvenue sur votre compte",
 	"pastanaga.calendar.invalid-format": "Format de date non valide (format attendu : \"MMM dd, YYYY\")",
 	"pastanaga.calendar.months": "Mois",
 	"pastanaga.calendar.years": "Années",
