--- a/libs/user/src/assets/i18n/es.json
+++ b/libs/user/src/assets/i18n/es.json
@@ -17,6 +17,8 @@
 	"login.dont_see": "¿No lo ves?",
 	"login.email": "Correo electrónico",
 	"login.error.auth_error": "Error de autenticación.",
+	"login.error.aws.invalid_customer_token": "Customer_token no válido",
+	"login.error.aws.missing_customer_token": "Falta el customer_token",
 	"login.error.get_consent_error": "Se ha producido un error al obtener la información de consentimiento",
 	"login.error.google_workspace": "Registrarse con Google está restringido a dominios de espacios de trabajo, lo siento.",
 	"login.error.login_error": "Se ha producido un error durante la autenticación",
