--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -657,6 +657,18 @@
 	"notification.type.modification-completed": "Edición de recursos completada",
 	"notification.type.modification-failed": "Edición de recursos fallada",
 	"notification.type.sync-server-down": "El servidor de sincronización está inactivo",
+	"onboarding.aws.create-kb.title": "Crear una Knowledge Box",
+	"onboarding.aws.get-started.create-kb": "Crear mi propia Knowledge Box",
+	"onboarding.aws.get-started.create-kb-or-invite": "¿Le gustaría crear su propio Knowledge Box o invitar a otros usuarios a configurarlo?",
+	"onboarding.aws.get-started.invite-owner": "Invitar al propietario de una cuenta a crear Knowledge Box",
+	"onboarding.aws.get-started.kb-help": "Un Knowledge Box es un contenedor que almacena y organiza datos dentro de su cuenta Nuclia. Las Knowledge Boxes representan espacios de trabajo aislados (como proyectos, equipos o clientes) y funcionan de forma independiente con sus propios permisos de acceso para mantener la información segura y organizada.",
+	"onboarding.aws.get-started.kb-required": "Para cargar, administrar y buscar archivos, primero debe crear un <strong>Knowledge Box<strong>.",
+	"onboarding.aws.get-started.next-button": "Proximo paso",
+	"onboarding.aws.monthly-budget.help": "Puede establecer un límite de gasto mensual. Siempre puedes cambiarlo más adelante en la página de Suscripción.",
+	"onboarding.aws.monthly-budget.question": "¿Quieres establecer un presupuesto mensual de consumo?",
+	"onboarding.aws.monthly-budget.set-up-account-button": "Configurar tu cuenta",
+	"onboarding.aws.monthly-budget.set-up-error": "Se produjo un error al configurar el presupuesto mensual. Vuelva a intentarlo más tarde desde la página de Suscripción.",
+	"onboarding.aws.title": "Bienvenido a tu cuenta",
 	"pastanaga.calendar.invalid-format": "Formato de fecha no válido (formato esperado: \"MMM dd, YYYY\")",
 	"pastanaga.calendar.months": "Meses",
 	"pastanaga.calendar.years": "Años",
