--- a/libs/user/src/assets/i18n/fr.json
+++ b/libs/user/src/assets/i18n/fr.json
@@ -17,6 +17,8 @@
 	"login.dont_see": "Vous ne le voyez pas ?",
 	"login.email": "Email",
 	"login.error.auth_error": "Erreur d'authentification.",
+	"login.error.aws.invalid_customer_token": "Customer_token invalide",
+	"login.error.aws.missing_customer_token": "Customer_token manquant",
 	"login.error.get_consent_error": "Une erreur s'est produite lors de la récupération des informations relatives au consentement",
 	"login.error.google_workspace": "L'inscription avec Google est limitée aux domaines professionnels, désolé.",
 	"login.error.login_error": "Une erreur s'est produite lors de la connexion",
