--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -678,8 +678,12 @@
 	"profile.select_language": "Select language",
 	"prompt-lab.configuration.generate-button": "Generate",
 	"prompt-lab.configuration.models.title": "Select all the models you want to compare",
+	"prompt-lab.configuration.prompts.example": "Examples",
+	"prompt-lab.configuration.prompts.examples.first-example": "Taking into account this context:\n{context} \nGive a detailed answer to this question:\n{question} . \nIf you do not find an answer in the context, say that you don't have enough data.",
+	"prompt-lab.configuration.prompts.examples.second-example": "Taking into account this provided context.\n    Context:\n    {context}\n Answer this question like a medical professional:\n \"{question}\"",
+	"prompt-lab.configuration.prompts.examples.third-example": "Taking into account this provided context:  \n{context} \nCan you answer this question in a clear, concise way:\n{question}",
 	"prompt-lab.configuration.prompts.label": "Prompt",
-	"prompt-lab.configuration.prompts.placeholder": "Input your prompt with the word {question} in brackets where you want the query to be placed",
+	"prompt-lab.configuration.prompts.placeholder": "Input your prompt with the terms {question} and {context} in brackets where you want the question and context to be placed.",
 	"prompt-lab.configuration.prompts.title": "Define the prompts that will influence the way the system behaves when you ask a question (optional)",
 	"prompt-lab.configuration.question.help": "Add your question by pressing Enter or the '+' button",
 	"prompt-lab.configuration.question.label": "Question",
