--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -677,16 +677,18 @@
 	"profile.select_language": "Selecciona idioma",
 	"prompt-lab.configuration.generate-button": "Generar",
 	"prompt-lab.configuration.models.title": "Selecciona todos los modelos que quieras comparar",
+	"prompt-lab.configuration.prompts.example": "Ejemplos",
+	"prompt-lab.configuration.prompts.examples.first-example": "Teniendo en cuenta este contexto:\n{context}\nDé una respuesta detallada a esta pregunta:\n{question} .\nSi no encuentra una respuesta en el contexto, diga que no tiene suficientes datos.",
+	"prompt-lab.configuration.prompts.examples.second-example": "Teniendo en cuenta este contexto proporcionado.\n    Contexto:\n    {context}\nResponda esta pregunta como un profesional médico:\n \"{question}\"",
+	"prompt-lab.configuration.prompts.examples.third-example": "Teniendo en cuenta este contexto proporcionado:\n{context}\n¿Puedes responder a esta pregunta de forma clara y concisa?\n{question}",
 	"prompt-lab.configuration.prompts.label": "Prompt",
-	"prompt-lab.configuration.prompts.placeholder": "Ingrese su mensaje con la palabra {question} entre corchetes donde desea que se coloque la consulta",
+	"prompt-lab.configuration.prompts.placeholder": "Ingrese su mensaje con los términos {question} y {context} entre corchetes donde desea que se coloque la pregunta y el contexto.",
 	"prompt-lab.configuration.prompts.title": "Defina las indicaciones que influirán en la forma en que se comporta el sistema cuando haga una pregunta (opcional)",
 	"prompt-lab.configuration.question.help": "Agregue su pregunta presionando Enter o el botón '+'",
 	"prompt-lab.configuration.question.label": "Pregunta",
 	"prompt-lab.configuration.question.placeholder": "Escribe tu pregunta aquí",
 	"prompt-lab.configuration.question.title": "Escribe hasta tres preguntas con las que quieras probar",
 	"prompt-lab.configuration.title": "Configuración",
-	"prompt-lab.generate.confirmation.inconsistency-warning": "Tenga en cuenta que durante la prueba, los usuarios que puedan estar utilizando su Knowledge Box podrían experimentar respuestas inconsistentes.\n<br><br>Realice las pruebas mientras esté en desarrollo o cuando esté seguro de que ningún usuario se verá afectado por estos cambios.",
-	"prompt-lab.generate.confirmation.title": "Antes de continuar...",
 	"prompt-lab.generate.loading.description": "Estamos generando tus resultados. Por favor no abandones la página.",
 	"prompt-lab.generate.loading.title": "Sólo un momento…",
 	"prompt-lab.page-description": "Pruebe los LLM y las indicaciones, vea cómo funcionan juntos, elija qué configuraciones desea aplicar a su Knowledge Box.",
