--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -677,16 +677,18 @@
 	"profile.select_language": "Selecciona l’idioma preferent",
 	"prompt-lab.configuration.generate-button": "Generar",
 	"prompt-lab.configuration.models.title": "Seleccioneu tots els models que voleu comparar",
+	"prompt-lab.configuration.prompts.example": "Exemples",
+	"prompt-lab.configuration.prompts.examples.first-example": "Tenint en compte aquest context:\n{context}\nDoneu una resposta detallada a aquesta pregunta:\n{question} .\nSi no trobeu una resposta en el context, digueu que no teniu prou dades.",
+	"prompt-lab.configuration.prompts.examples.second-example": "Tenint en compte aquest context proporcionat.\n    Context:\n    {context}\nRespon aquesta pregunta com un professional mèdic:\n \"{question}\"",
+	"prompt-lab.configuration.prompts.examples.third-example": "Tenint en compte aquest context proporcionat:\n{context}\nPots respondre aquesta pregunta d'una manera clara i concisa:\n{question}",
 	"prompt-lab.configuration.prompts.label": "Prompt",
-	"prompt-lab.configuration.prompts.placeholder": "Introduïu la vostra sol·licitud amb la paraula {question} entre claudàtors on voleu que es col·loqui la consulta",
+	"prompt-lab.configuration.prompts.placeholder": "Introduïu la vostra sol·licitud amb els termes {question} i {context} entre parèntesis on voleu que es col·loquin la pregunta i el context.",
 	"prompt-lab.configuration.prompts.title": "Definiu les indicacions que influiran en la manera com es comporta el sistema quan feu una pregunta (opcional)",
 	"prompt-lab.configuration.question.help": "Afegiu la vostra pregunta prement Retorn o el botó \"+\"",
 	"prompt-lab.configuration.question.label": "Pregunta",
 	"prompt-lab.configuration.question.placeholder": "Escriu la teva pregunta aquí",
 	"prompt-lab.configuration.question.title": "Escriu fins a tres preguntes amb les quals vulguis provar",
 	"prompt-lab.configuration.title": "Configuració",
-	"prompt-lab.generate.confirmation.inconsistency-warning": "Tingueu en compte que durant la prova, els usuaris que podrien estar utilitzant el vostre Knowledge Box podrien experimentar respostes inconsistents.\n<br><br>Si us plau, feu la prova durant el desenvolupament o quan estigueu segur que cap usuari es veurà afectat per aquests canvis.",
-	"prompt-lab.generate.confirmation.title": "Abans de continuar...",
 	"prompt-lab.generate.loading.description": "Estem generant els teus resultats. Si us plau, no abandonis la pàgina.",
 	"prompt-lab.generate.loading.title": "Només un moment…",
 	"prompt-lab.page-description": "Proveu els LLM i les indicacions, mireu com funcionen junts, trieu quina configuració voleu aplicar al vostre Knowledge Box.",
