--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -678,16 +678,18 @@
 	"profile.select_language": "Choisir la langue",
 	"prompt-lab.configuration.generate-button": "Générer",
 	"prompt-lab.configuration.models.title": "Sélectionnez tous les modèles que vous souhaitez comparer",
+	"prompt-lab.configuration.prompts.example": "Exemples",
+	"prompt-lab.configuration.prompts.examples.first-example": "En tenant compte de ce contexte :\n{context}\nDonnez une réponse détaillée à cette question :\n{question} .\nSi vous ne trouvez pas de réponse dans le contexte, dites que vous ne disposez pas de suffisamment de données.",
+	"prompt-lab.configuration.prompts.examples.second-example": "En tenant compte de ce contexte fourni.\n    Contexte:\n    {context}\nRépondez à cette question comme un professionnel de la santé :\n \"{question}\"",
+	"prompt-lab.configuration.prompts.examples.third-example": "En tenant compte de ce contexte fourni :\n{context}\nPouvez-vous répondre à cette question de manière claire et concise :\n{question}",
 	"prompt-lab.configuration.prompts.label": "Prompt",
-	"prompt-lab.configuration.prompts.placeholder": "Saisissez votre prompt avec le mot {question} entre accolades à l'endroit où vous souhaitez que la requête soit placée.",
+	"prompt-lab.configuration.prompts.placeholder": "Saisissez votre invite avec les termes {question} et {context} entre parenthèses à l'endroit où vous souhaitez que la question et le contexte soient placés.",
 	"prompt-lab.configuration.prompts.title": "Définir les prompts qui influenceront le comportement du système lorsque vous posez une question (facultatif)",
 	"prompt-lab.configuration.question.help": "Ajoutez votre question en appuyant sur Entrée ou sur le bouton '+'",
 	"prompt-lab.configuration.question.label": "Question",
 	"prompt-lab.configuration.question.placeholder": "Écrivez votre question ici",
 	"prompt-lab.configuration.question.title": "Écrivez jusqu'à trois questions avec lesquelles vous souhaitez tester",
 	"prompt-lab.configuration.title": "Configuration",
-	"prompt-lab.generate.confirmation.inconsistency-warning": "Veuillez noter que lors des tests, les utilisateurs susceptibles d'utiliser votre Knowledge Box pourraient rencontrer des réponses incohérentes.\n<br><br>Veuillez effectuer les tests pendant le développement ou lorsque vous êtes sûr qu'aucun utilisateur ne sera affecté par ces modifications.",
-	"prompt-lab.generate.confirmation.title": "Avant de continuer…",
 	"prompt-lab.generate.loading.description": "Nous générons vos résultats. Merci de ne pas quitter la page.",
 	"prompt-lab.generate.loading.title": "Juste un moment...",
 	"prompt-lab.page-description": "Testez les LLM et les invites, voyez comment ils fonctionnent ensemble, choisissez les paramètres que vous souhaitez appliquer à votre Knowledge Box.",
