New KB creation form used in both modal and onboarding flow

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -495,8 +495,9 @@
 	"kb.create.in_progress": "Creació de la Knowledge Box en curs...",
 	"kb.create.invalid_name": "El nom de la Knowledge Box no és vàlid",
 	"kb.create.title": "Crea una Knowledge Box",
-	"kb.invalid-slug": "El Knowledge Box slug no és vàlid",
-	"kb.name": "Nom de la Knowledge Box",
+	"kb.form.invalid-slug": "El Knowledge Box slug no és vàlid",
+	"kb.form.name": "Nom de la Knowledge Box",
+	"kb.form.required-name": "Camp necessari",
 	"kb.settings.learning-options.anthropic": "Anthropic Claude 2.1",
 	"kb.settings.learning-options.azure-mistral": "Mistral + Azure Mistral large",
 	"kb.settings.learning-options.chatgpt": "OpenAI ChatGPT-3.5",
@@ -664,6 +665,7 @@
 	"onboarding.aws.get-started.kb-help": "Un Knowledge Box és un contenidor que emmagatzema i organitza dades dins del vostre compte Nuclia. Els Knowledge Boxes representen espais de treball aïllats (com ara projectes, equips o clients) i funcionen de manera independent amb els seus propis permisos d'accés per mantenir la informació segura i organitzada.",
 	"onboarding.aws.get-started.kb-required": "Per carregar, gestionar i cercar fitxers primer heu de crear un <strong>Knowledge Box<strong>.",
 	"onboarding.aws.get-started.next-button": "Següent pas",
+	"onboarding.aws.get-started.title": "Inicia la configuració",
 	"onboarding.aws.monthly-budget.help": "Podeu establir un límit de despesa mensual. Sempre el podeu canviar més endavant a la pàgina de subscripció.",
 	"onboarding.aws.monthly-budget.question": "T'agradaria establir un pressupost mensual per al consum?",
 	"onboarding.aws.monthly-budget.set-up-account-button": "Configura el teu compte",
@@ -691,18 +693,16 @@
 	"profile.select_language": "Selecciona l’idioma preferent",
 	"prompt-lab.configuration.generate-button": "Generar",
 	"prompt-lab.configuration.models.title": "Seleccioneu tots els models que voleu comparar",
-	"prompt-lab.configuration.prompts.example": "Exemples",
-	"prompt-lab.configuration.prompts.examples.first-example": "Tenint en compte aquest context:\n{context}\nDoneu una resposta detallada a aquesta pregunta:\n{question} .\nSi no trobeu una resposta en el context, digueu que no teniu prou dades.",
-	"prompt-lab.configuration.prompts.examples.second-example": "Tenint en compte aquest context proporcionat.\n    Context:\n    {context}\nRespon aquesta pregunta com un professional mèdic:\n \"{question}\"",
-	"prompt-lab.configuration.prompts.examples.third-example": "Tenint en compte aquest context proporcionat:\n{context}\nPots respondre aquesta pregunta d'una manera clara i concisa:\n{question}",
 	"prompt-lab.configuration.prompts.label": "Prompt",
-	"prompt-lab.configuration.prompts.placeholder": "Introduïu la vostra sol·licitud amb els termes {question} i {context} entre parèntesis on voleu que es col·loquin la pregunta i el context.",
+	"prompt-lab.configuration.prompts.placeholder": "Introduïu la vostra sol·licitud amb la paraula {question} entre claudàtors on voleu que es col·loqui la consulta",
 	"prompt-lab.configuration.prompts.title": "Definiu les indicacions que influiran en la manera com es comporta el sistema quan feu una pregunta (opcional)",
 	"prompt-lab.configuration.question.help": "Afegiu la vostra pregunta prement Retorn o el botó \"+\"",
 	"prompt-lab.configuration.question.label": "Pregunta",
 	"prompt-lab.configuration.question.placeholder": "Escriu la teva pregunta aquí",
 	"prompt-lab.configuration.question.title": "Escriu fins a tres preguntes amb les quals vulguis provar",
 	"prompt-lab.configuration.title": "Configuració",
+	"prompt-lab.generate.confirmation.inconsistency-warning": "Tingueu en compte que durant la prova, els usuaris que podrien estar utilitzant el vostre Knowledge Box podrien experimentar respostes inconsistents.\n<br><br>Si us plau, feu la prova durant el desenvolupament o quan estigueu segur que cap usuari es veurà afectat per aquests canvis.",
+	"prompt-lab.generate.confirmation.title": "Abans de continuar...",
 	"prompt-lab.generate.loading.description": "Estem generant els teus resultats. Si us plau, no abandonis la pàgina.",
 	"prompt-lab.generate.loading.title": "Només un moment…",
 	"prompt-lab.page-description": "Proveu els LLM i les indicacions, mireu com funcionen junts, trieu quina configuració voleu aplicar al vostre Knowledge Box.",
