--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -496,8 +496,9 @@
 	"kb.create.in_progress": "Création de la Knowledge Box en cours…",
 	"kb.create.invalid_name": "Nom de la Knowledge Box invalide",
 	"kb.create.title": "Créer une Knowledge Box",
-	"kb.invalid-slug": "Knowledge Box slug invalide",
-	"kb.name": "Nom de la Knowledge Box",
+	"kb.form.invalid-slug": "Knowledge Box slug invalide",
+	"kb.form.name": "Nom de la Knowledge Box",
+	"kb.form.required-name": "Champs requis",
 	"kb.settings.learning-options.anthropic": "Anthropic Claude 2.1",
 	"kb.settings.learning-options.azure-mistral": "Mistral + Azure Mistral large",
 	"kb.settings.learning-options.chatgpt": "OpenAI ChatGPT-3.5",
@@ -665,7 +666,7 @@
 	"onboarding.aws.get-started.kb-help": "Une Knowledge Box est un conteneur qui stocke et organise les données dans votre compte Nuclia. Les Knowledge Boxes représentent des espaces de travail isolés (tels que des projets, des équipes ou des clients) et fonctionnent de manière indépendante avec leurs propres autorisations d'accès pour garantir la sécurité et l'organisation des informations.",
 	"onboarding.aws.get-started.kb-required": "Pour importer, gérer et rechercher des fichiers, vous devez d'abord créer une <strong>Knowledge Box<strong>.",
 	"onboarding.aws.get-started.next-button": "Étape suivante",
-	"onboarding.aws.get-started.title": "Commencer",
+	"onboarding.aws.get-started.title": "Démarrer la configuration",
 	"onboarding.aws.monthly-budget.help": "Vous pouvez définir une limite de dépenses mensuelle. Vous pourrez toujours la modifier ultérieurement sur la page Abonnement.",
 	"onboarding.aws.monthly-budget.question": "Souhaitez-vous fixer un budget mensuel de consommation ?",
 	"onboarding.aws.monthly-budget.set-up-account-button": "Configurez votre compte",
@@ -693,18 +694,16 @@
 	"profile.select_language": "Choisir la langue",
 	"prompt-lab.configuration.generate-button": "Générer",
 	"prompt-lab.configuration.models.title": "Sélectionnez tous les modèles que vous souhaitez comparer",
-	"prompt-lab.configuration.prompts.example": "Exemples",
-	"prompt-lab.configuration.prompts.examples.first-example": "En tenant compte de ce contexte :\n{context}\nDonnez une réponse détaillée à cette question :\n{question} .\nSi vous ne trouvez pas de réponse dans le contexte, dites que vous ne disposez pas de suffisamment de données.",
-	"prompt-lab.configuration.prompts.examples.second-example": "En tenant compte de ce contexte fourni.\n    Contexte:\n    {context}\nRépondez à cette question comme un professionnel de la santé :\n \"{question}\"",
-	"prompt-lab.configuration.prompts.examples.third-example": "En tenant compte de ce contexte fourni :\n{context}\nPouvez-vous répondre à cette question de manière claire et concise :\n{question}",
 	"prompt-lab.configuration.prompts.label": "Prompt",
-	"prompt-lab.configuration.prompts.placeholder": "Saisissez votre invite avec les termes {question} et {context} entre parenthèses à l'endroit où vous souhaitez que la question et le contexte soient placés.",
+	"prompt-lab.configuration.prompts.placeholder": "Saisissez votre prompt avec le mot {question} entre accolades à l'endroit où vous souhaitez que la requête soit placée.",
 	"prompt-lab.configuration.prompts.title": "Définir les prompts qui influenceront le comportement du système lorsque vous posez une question (facultatif)",
 	"prompt-lab.configuration.question.help": "Ajoutez votre question en appuyant sur Entrée ou sur le bouton '+'",
 	"prompt-lab.configuration.question.label": "Question",
 	"prompt-lab.configuration.question.placeholder": "Écrivez votre question ici",
 	"prompt-lab.configuration.question.title": "Écrivez jusqu'à trois questions avec lesquelles vous souhaitez tester",
 	"prompt-lab.configuration.title": "Configuration",
+	"prompt-lab.generate.confirmation.inconsistency-warning": "Veuillez noter que lors des tests, les utilisateurs susceptibles d'utiliser votre Knowledge Box pourraient rencontrer des réponses incohérentes.\n<br><br>Veuillez effectuer les tests pendant le développement ou lorsque vous êtes sûr qu'aucun utilisateur ne sera affecté par ces modifications.",
+	"prompt-lab.generate.confirmation.title": "Avant de continuer…",
 	"prompt-lab.generate.loading.description": "Nous générons vos résultats. Merci de ne pas quitter la page.",
 	"prompt-lab.generate.loading.title": "Juste un moment...",
 	"prompt-lab.page-description": "Testez les LLM et les invites, voyez comment ils fonctionnent ensemble, choisissez les paramètres que vous souhaitez appliquer à votre Knowledge Box.",
