Invite collaborators modal
  - Display invite collaborators modal when there is a query parameter `?setup=invite-collaborators`
  - Let user choose to go to SSO configuration page or to directly invite users
  - When inviting users, display toasts for success and error and redirect to user management page once done
  - Display pending invitations in User management page + add ability to delete invitation.

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -47,6 +47,19 @@
 	"account.free_trial_ended.title": "Oh! La teva prova gratuïta ha finalitzat",
 	"account.full_name": "Nom i Cognoms",
 	"account.generate_key": "Generar un nou codi",
+	"account.invite-collaborators.add-users.add-owners": "Afegir administrador al compte",
+	"account.invite-collaborators.add-users.description": "Afegir propietaris al vostre compte els dóna permís per gestionar el compte, crear i gestionar Knowledge Boxes, així com convidar col·laboradors a cada Knowledge Box.",
+	"account.invite-collaborators.add-users.email.help": "Premeu Intro per afegir",
+	"account.invite-collaborators.add-users.email.label": "Correu electrònic de l'usuari",
+	"account.invite-collaborators.add-users.invite-button": "Convida usuaris",
+	"account.invite-collaborators.add-users.title": "Convida usuaris",
+	"account.invite-collaborators.add-users.toast.error": "S'ha produït un error en convidar {{emails}}",
+	"account.invite-collaborators.add-users.toast.success": "{{count}} administradors convidats correctament.",
+	"account.invite-collaborators.done": "Fet",
+	"account.invite-collaborators.setup-sso.description": "Si la vostra empresa utilitza l'inici de sessió únic, primer haureu de configurar-lo a la pàgina de configuració del compte. Aleshores, podreu convidar col·laboradors des de la pàgina Usuaris.",
+	"account.invite-collaborators.setup-sso.link": "Aneu a la pàgina de configuració del compte",
+	"account.invite-collaborators.setup-sso.title": "Configura l'inici de sessió únic",
+	"account.invite-collaborators.title": "Afegeix col·laboradors",
 	"account.invited_user": "Hem enviat un correu electrònic a {{user}} invitant-lo a unir-se a aquest compte",
 	"account.kb.add": "Afegir Knowledge Box",
 	"account.kb.count": "{{count}} de {{max}}",
