--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -47,6 +47,19 @@
 	"account.free_trial_ended.title": "Oh! Your free trial has ended",
 	"account.full_name": "Name and surname",
 	"account.generate_key": "Generate a new key",
+	"account.invite-collaborators.add-users.add-owners": "Add account owners",
+	"account.invite-collaborators.add-users.description": "Adding owners to your account gives them permission to manage the account, create and manage Knowledge Boxes, as well as invite collaborators to each Knowledge Box.",
+	"account.invite-collaborators.add-users.email.help": "Press Enter to add",
+	"account.invite-collaborators.add-users.email.label": "User’s email",
+	"account.invite-collaborators.add-users.invite-button": "Invite users",
+	"account.invite-collaborators.add-users.title": "Invite users",
+	"account.invite-collaborators.add-users.toast.error": "An error occurred while inviting {{emails}}",
+	"account.invite-collaborators.add-users.toast.success": "{{count}} owners successfully invited.",
+	"account.invite-collaborators.done": "Done",
+	"account.invite-collaborators.setup-sso.description": "If your enterprise is using Single Sign-On, you should configure it first on the Account settings page. Then, you'll be able to invite collaborators from the Users page.",
+	"account.invite-collaborators.setup-sso.link": "Go to Account settings page",
+	"account.invite-collaborators.setup-sso.title": "Setup Single Sign-On",
+	"account.invite-collaborators.title": "Add collaborators",
 	"account.invited_user": "We have sent an invitation email to {{user}} to join this account",
 	"account.kb.add": "Add Knowledge Box",
 	"account.kb.count": "{{count}} of {{max}}",
