--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -47,6 +47,19 @@
 	"account.free_trial_ended.title": "¡Oh! Tu prueba gratuita ha finalizado",
 	"account.full_name": "Nombre y Apellidos",
 	"account.generate_key": "Generar un nuevo código",
+	"account.invite-collaborators.add-users.add-owners": "Añadir administrador a la cuenta",
+	"account.invite-collaborators.add-users.description": "Agregar propietarios a su cuenta les otorga permiso para administrar la cuenta, crear y administrar Knowledge Boxes, así como invitar colaboradores a cada Knowledge Box.",
+	"account.invite-collaborators.add-users.email.help": "Presione Entrar para Agregar",
+	"account.invite-collaborators.add-users.email.label": "Correo electrónico del usuario",
+	"account.invite-collaborators.add-users.invite-button": "Invitar usuarios",
+	"account.invite-collaborators.add-users.title": "Invitar usuarios",
+	"account.invite-collaborators.add-users.toast.error": "Se produjo un error al invitar a {{emails}}",
+	"account.invite-collaborators.add-users.toast.success": "{{count}} administradores invitados correctamente.",
+	"account.invite-collaborators.done": "Hecho",
+	"account.invite-collaborators.setup-sso.description": "Si su empresa utiliza el inicio de sesión único, debe configurarlo primero en la página de configuración de la cuenta. Luego, podrás invitar a colaboradores desde la página de Usuarios.",
+	"account.invite-collaborators.setup-sso.link": "Ir a la página de configuración de la cuenta",
+	"account.invite-collaborators.setup-sso.title": "Configurar el inicio de sesión único",
+	"account.invite-collaborators.title": "Agregar colaboradores",
 	"account.invited_user": "Hemos enviado un correo a {{user}} invitándolo en esta cuenta",
 	"account.kb.add": "Añadir Knowledge Box",
 	"account.kb.count": "{{count}} de {{max}}",
