--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -47,6 +47,19 @@
 	"account.free_trial_ended.title": "Votre essai gratuit est terminé",
 	"account.full_name": "Prénom et nom de famille",
 	"account.generate_key": "Générer une nouvelle clé",
+	"account.invite-collaborators.add-users.add-owners": "Ajouter des administrateurs au compte",
+	"account.invite-collaborators.add-users.description": "L'ajout de propriétaires à votre compte leur donne l'autorisation de gérer le compte, de créer et de gérer des Knowledge Boxes, ainsi que d'inviter des collaborateurs dans chaque Knowledge Box.",
+	"account.invite-collaborators.add-users.email.help": "Appuyez sur entrée pour ajouter",
+	"account.invite-collaborators.add-users.email.label": "Email de l'utilisateur",
+	"account.invite-collaborators.add-users.invite-button": "Inviter les utilisateurs",
+	"account.invite-collaborators.add-users.title": "Inviter des utilisateurs",
+	"account.invite-collaborators.add-users.toast.error": "Une erreur s'est produite lors de l'invitation de {{emails}}",
+	"account.invite-collaborators.add-users.toast.success": "{{count}} administrateurs invités avec succès.",
+	"account.invite-collaborators.done": "Terminé",
+	"account.invite-collaborators.setup-sso.description": "Si votre entreprise utilise l'authentification unique, vous devez d'abord la configurer sur la page Paramètres du compte. Ensuite, vous pourrez inviter des collaborateurs depuis la page Utilisateurs.",
+	"account.invite-collaborators.setup-sso.link": "Accédez à la page Paramètres du compte",
+	"account.invite-collaborators.setup-sso.title": "Configurer l'authentification unique",
+	"account.invite-collaborators.title": "Ajouter des collaborateurs",
 	"account.invited_user": "Nous avons envoyé un e-mail d'invitation à {{user}} pour qu'il s'inscrive sur ce compte.",
 	"account.kb.add": "Ajouter une Knowledge Box",
 	"account.kb.count": "{{count}} sur {{max}}",
