--- a/libs/sync/src/assets/i18n/ca.json
+++ b/libs/sync/src/assets/i18n/ca.json
@@ -45,6 +45,7 @@
 	"upload.select.description": "Selecciona les dades que vols pujar",
 	"upload.select.search": "Cerca",
 	"upload.server.back": "Esquena",
+	"upload.server.description": "Podeu executar el vostre servidor de sincronització localment (si és així, les sincronitzacions s'aturaran quan el vostre ordinador portàtil estigui apagat) o en un servidor propi.\n<ul>\n<li>Per instal·lar el servidor de sincronització localment, baixeu <a href=\"https://github.com/nuclia/sync-agent/releases/latest\" target=\"_new\">la darrera versió</a> (assegureu-vos de triar l'instal·lador adequat per al vostre sistema: Windows, Mac, Linux).</li>\n<li>Per implementar-lo manualment en un servidor, seguiu <a href=\"https://github.com/nuclia/sync-agent/blob/main/server/README.md\" target=\"_new\">aquestes instruccions</a>.</li>",
 	"upload.server.external": "Servidor extern",
 	"upload.server.external-button": "Utilitzeu un servidor extern",
 	"upload.server.help": "Introduïu {{url}} si el vostre agent de sincronització s'executa en local",
