--- a/libs/sync/src/assets/i18n/en.json
+++ b/libs/sync/src/assets/i18n/en.json
@@ -45,6 +45,7 @@
 	"upload.select.description": "Select the data you want to upload",
 	"upload.select.search": "Search",
 	"upload.server.back": "Back",
+	"upload.server.description": "You can either run your sync server locally (if so, syncs will stop when your laptop is switched off), or on a server of your own.\n<ul>\n<li>To install the sync server locally, download <a href=\"https://github.com/nuclia/sync-agent/releases/latest\" target=\"_new\">the latest version</a> (make sure to choose the proper installer for your system: Windows, Mac, Linux).</li>\n<li>To deploy it manually on a server, follow <a href=\"https://github.com/nuclia/sync-agent/blob/main/server/README.md\" target=\"_new\">these instructions</a>.</li>",
 	"upload.server.external": "External server",
 	"upload.server.external-button": "Use external server",
 	"upload.server.help": "Enter {{url}} if your sync agent is running locally",
