--- a/libs/sync/src/assets/i18n/es.json
+++ b/libs/sync/src/assets/i18n/es.json
@@ -45,6 +45,7 @@
 	"upload.select.description": "Selecciona los datos que quieres subir",
 	"upload.select.search": "Busca",
 	"upload.server.back": "Atrás",
+	"upload.server.description": "Puede ejecutar su servidor de sincronización localmente (si es así, las sincronizaciones se detendrán cuando su computadora portátil esté apagada) o en su propio servidor.\n<ul>\n<li>Para instalar el servidor de sincronización localmente, descargue <a href=\"https://github.com/nuclia/sync-agent/releases/latest\" target=\"_new\">la última versión</a> (asegúrese de elegir el instalador adecuado para su sistema: Windows, Mac, Linux).</li>\n<li>Para implementarlo manualmente en un servidor, siga <a href=\"https://github.com/nuclia/sync-agent/blob/main/server/README.md\" target=\"_new\">estas instrucciones</a>.</li>",
 	"upload.server.external": "Servidor externo",
 	"upload.server.external-button": "Usar servidor externo",
 	"upload.server.help": "Introduce {{url}} si tu agente de sincronización se está ejecutando en local",
