Allow to trigger sync

--- a/libs/sync/src/assets/i18n/ca.json
+++ b/libs/sync/src/assets/i18n/ca.json
@@ -28,7 +28,10 @@
 	"pastanaga.datetime.one-minute-ago": "Fa 1 min",
 	"pastanaga.datetime.yesterday": "Ahir",
 	"upload.activity.date": "Data",
+	"upload.activity.error": "La sincronització ha fallat",
 	"upload.activity.event": "Missatge",
+	"upload.activity.help": "Totes les sincronitzacions s'activen automàticament cada 60 minuts.",
+	"upload.activity.sync-now": "Sincronitza ara",
 	"upload.add-connector": "Afegir connector",
 	"upload.authentication.fail": "L'autenticació ha fallat",
 	"upload.authentication.success": "Autenticació correcta",
