--- a/libs/sync/src/assets/i18n/en.json
+++ b/libs/sync/src/assets/i18n/en.json
@@ -28,7 +28,10 @@
 	"pastanaga.datetime.one-minute-ago": "1 min ago",
 	"pastanaga.datetime.yesterday": "Yesterday",
 	"upload.activity.date": "Date",
+	"upload.activity.error": "Sync failed",
 	"upload.activity.event": "Message",
+	"upload.activity.help": "All syncs are triggered automatically every 60 minutes.",
+	"upload.activity.sync-now": "Sync now",
 	"upload.add-connector": "Add connector",
 	"upload.authentication.fail": "Authentication failed",
 	"upload.authentication.success": "Successful authentication",
