--- a/libs/sync/src/assets/i18n/es.json
+++ b/libs/sync/src/assets/i18n/es.json
@@ -28,7 +28,10 @@
 	"pastanaga.datetime.one-minute-ago": "Hace 1 minuto",
 	"pastanaga.datetime.yesterday": "Ayer",
 	"upload.activity.date": "Fecha",
+	"upload.activity.error": "Sincronización fallida",
 	"upload.activity.event": "Mensaje",
+	"upload.activity.help": "Todas las sincronizaciones se activan automáticamente cada 60 minutos.",
+	"upload.activity.sync-now": "Sincronizar ahora",
 	"upload.add-connector": "Añadir conector",
 	"upload.authentication.fail": "Autenticación fallida",
 	"upload.authentication.success": "Autenticación exitosa",
