--- a/libs/sync/src/assets/i18n/fr.json
+++ b/libs/sync/src/assets/i18n/fr.json
@@ -28,7 +28,10 @@
 	"pastanaga.datetime.one-minute-ago": "Il y a 1 minute",
 	"pastanaga.datetime.yesterday": "Hier",
 	"upload.activity.date": "Date",
+	"upload.activity.error": "Échec de la synchronisation",
 	"upload.activity.event": "Message",
+	"upload.activity.help": "Toutes les synchronisations sont déclenchées automatiquement toutes les 60 minutes.",
+	"upload.activity.sync-now": "Synchroniser maintenant",
 	"upload.add-connector": "Ajouter un connecteur",
 	"upload.authentication.fail": "Échec de l'authentification",
 	"upload.authentication.success": "Authentification réussie",
