Ericbrehault/sc 9099/fix sync agent navigation (#1366)
* hide deskopt block in home page

* fix nav

* hide filter until it is implemented

* clean up localstorage when auth is done

* back button in sync setting page

* link to download/install

* Allow to trigger sync

* go back to activity after change

* fix build

--- a/libs/sync/src/assets/i18n/ca.json
+++ b/libs/sync/src/assets/i18n/ca.json
@@ -28,7 +28,10 @@
 	"pastanaga.datetime.one-minute-ago": "Fa 1 min",
 	"pastanaga.datetime.yesterday": "Ahir",
 	"upload.activity.date": "Data",
+	"upload.activity.error": "La sincronització ha fallat",
 	"upload.activity.event": "Missatge",
+	"upload.activity.help": "Totes les sincronitzacions s'activen automàticament cada 60 minuts.",
+	"upload.activity.sync-now": "Sincronitza ara",
 	"upload.add-connector": "Afegir connector",
 	"upload.authentication.fail": "L'autenticació ha fallat",
 	"upload.authentication.success": "Autenticació correcta",
@@ -44,6 +47,8 @@
 	"upload.select.all": "Seleccionar tot",
 	"upload.select.description": "Selecciona les dades que vols pujar",
 	"upload.select.search": "Cerca",
+	"upload.server.back": "Esquena",
+	"upload.server.description": "Podeu executar el vostre servidor de sincronització localment (si és així, les sincronitzacions s'aturaran quan el vostre ordinador portàtil estigui apagat) o en un servidor propi.\n<ul>\n<li>Per instal·lar el servidor de sincronització localment, baixeu <a href=\"https://github.com/nuclia/sync-agent/releases/latest\" target=\"_new\">la darrera versió</a> (assegureu-vos de triar l'instal·lador adequat per al vostre sistema: Windows, Mac, Linux).</li>\n<li>Per implementar-lo manualment en un servidor, seguiu <a href=\"https://github.com/nuclia/sync-agent/blob/main/server/README.md\" target=\"_new\">aquestes instruccions</a>.</li>",
 	"upload.server.external": "Servidor extern",
 	"upload.server.external-button": "Utilitzeu un servidor extern",
 	"upload.server.help": "Introduïu {{url}} si el vostre agent de sincronització s'executa en local",
