--- a/libs/sync/src/assets/i18n/en.json
+++ b/libs/sync/src/assets/i18n/en.json
@@ -28,7 +28,10 @@
 	"pastanaga.datetime.one-minute-ago": "1 min ago",
 	"pastanaga.datetime.yesterday": "Yesterday",
 	"upload.activity.date": "Date",
+	"upload.activity.error": "Sync failed",
 	"upload.activity.event": "Message",
+	"upload.activity.help": "All syncs are triggered automatically every 60 minutes.",
+	"upload.activity.sync-now": "Sync now",
 	"upload.add-connector": "Add connector",
 	"upload.authentication.fail": "Authentication failed",
 	"upload.authentication.success": "Successful authentication",
@@ -44,6 +47,8 @@
 	"upload.select.all": "Select all",
 	"upload.select.description": "Select the data you want to upload",
 	"upload.select.search": "Search",
+	"upload.server.back": "Back",
+	"upload.server.description": "You can either run your sync server locally (if so, syncs will stop when your laptop is switched off), or on a server of your own.\n<ul>\n<li>To install the sync server locally, download <a href=\"https://github.com/nuclia/sync-agent/releases/latest\" target=\"_new\">the latest version</a> (make sure to choose the proper installer for your system: Windows, Mac, Linux).</li>\n<li>To deploy it manually on a server, follow <a href=\"https://github.com/nuclia/sync-agent/blob/main/server/README.md\" target=\"_new\">these instructions</a>.</li>",
 	"upload.server.external": "External server",
 	"upload.server.external-button": "Use external server",
 	"upload.server.help": "Enter {{url}} if your sync agent is running locally",
