--- a/libs/sync/src/assets/i18n/fr.json
+++ b/libs/sync/src/assets/i18n/fr.json
@@ -28,7 +28,10 @@
 	"pastanaga.datetime.one-minute-ago": "Il y a 1 minute",
 	"pastanaga.datetime.yesterday": "Hier",
 	"upload.activity.date": "Date",
+	"upload.activity.error": "Échec de la synchronisation",
 	"upload.activity.event": "Message",
+	"upload.activity.help": "Toutes les synchronisations sont déclenchées automatiquement toutes les 60 minutes.",
+	"upload.activity.sync-now": "Synchroniser maintenant",
 	"upload.add-connector": "Ajouter un connecteur",
 	"upload.authentication.fail": "Échec de l'authentification",
 	"upload.authentication.success": "Authentification réussie",
@@ -44,6 +47,8 @@
 	"upload.select.all": "Sélectionner tout",
 	"upload.select.description": "Sélectionnez les données que vous souhaitez télécharger",
 	"upload.select.search": "Rechercher",
+	"upload.server.back": "Retour",
+	"upload.server.description": "Vous pouvez soit exécuter votre serveur de synchronisation localement (si tel est le cas, les synchronisations s'arrêteront lorsque votre ordinateur portable sera éteint), soit sur votre propre serveur.\n<ul>\n<li>Pour installer le serveur de synchronisation localement, téléchargez <a href=\"https://github.com/nuclia/sync-agent/releases/latest\" target=\"_new\">la dernière version</a> (assurez-vous de choisir le programme d'installation approprié pour votre système : Windows, Mac, Linux).</li>\n<li>Pour le déployer manuellement sur un serveur, suivez <a href=\"https://github.com/nuclia/sync-agent/blob/main/server/README.md\" target=\"_new\">ces instructions</a>.</li>",
 	"upload.server.external": "Serveur externe",
 	"upload.server.external-button": "Utiliser un serveur externe",
 	"upload.server.help": "Saisissez {{url}} si votre agent de synchronisation s'exécute localement",
