--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -1040,6 +1040,8 @@
 	"widget.generator.advanced.generative-answer-category.answers.label": "Answer generation",
 	"widget.generator.advanced.generative-answer-category.citations.help": "Show which sources have been used to generate the answer.",
 	"widget.generator.advanced.generative-answer-category.citations.label": "Citations",
+	"widget.generator.advanced.generative-answer-category.generative-model.help": "Use a different generative model than the default one defined in the Knowledge Box AI settings",
+	"widget.generator.advanced.generative-answer-category.generative-model.label": "Specific generative model",
 	"widget.generator.advanced.generative-answer-category.hide-results.help": "Hide the search results",
 	"widget.generator.advanced.generative-answer-category.hide-results.label": "Hide results",
 	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.help": "Full text results will not be used to generate answers",
