--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -1040,6 +1040,8 @@
 	"widget.generator.advanced.generative-answer-category.answers.label": "Génération de réponses",
 	"widget.generator.advanced.generative-answer-category.citations.help": "Montre quelles sources ont été utilisées pour générer la réponse.",
 	"widget.generator.advanced.generative-answer-category.citations.label": "Citations",
+	"widget.generator.advanced.generative-answer-category.generative-model.help": "Utiliser un modèle génératif différent de celui par défaut défini dans les paramètres AI de la Knowledge Box",
+	"widget.generator.advanced.generative-answer-category.generative-model.label": "Modèle génératif spécifique",
 	"widget.generator.advanced.generative-answer-category.hide-results.help": "Masquer les résultats de la recherche",
 	"widget.generator.advanced.generative-answer-category.hide-results.label": "Masquer les résultats",
 	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.help": "Les résultats full text ne seront pas utilisés pour générer les réponses",
