--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -497,11 +497,13 @@
 	"kb.create.title": "Crea una Knowledge Box",
 	"kb.invalid-slug": "El Knowledge Box slug no és vàlid",
 	"kb.name": "Nom de la Knowledge Box",
-	"kb.settings.learning-options.anthropic": "Anthropic Claude",
+	"kb.settings.learning-options.anthropic": "Anthropic Claude 2.1",
 	"kb.settings.learning-options.azure-mistral": "Mistral + Azure Mistral large",
 	"kb.settings.learning-options.chatgpt": "OpenAI ChatGPT-3.5",
 	"kb.settings.learning-options.chatgpt-azure": "OpenAI + Azure ChatGPT-4",
 	"kb.settings.learning-options.chatgpt-azure-3": "OpenAI + Azure ChatGPT-3.5",
+	"kb.settings.learning-options.claude-3": "Anthropic Claude 3 Opus",
+	"kb.settings.learning-options.claude-3-fast": "Anthropic Claude 3 Sonnet",
 	"kb.settings.learning-options.cohere": "Cohere Command (beta)",
 	"kb.settings.learning-options.disabled": "Desactivat",
 	"kb.settings.learning-options.enabled": "Habilitat",
